FIX: action icon colour and position fix on mobile

--- a/assets/stylesheets/previews_mobile.scss
+++ b/assets/stylesheets/previews_mobile.scss
@@ -234,6 +234,12 @@ img.thumbnail:not(.tiles-thumbnail) {
     justify-content: flex-end;
     text-align: right;
     vertical-align: bottom;
+
+    .list-button {
+      font-size: 1em;
+      padding: 0 0 0 10px;
+      color: $primary-medium;
+    }
   }
 }
 
